# UCASCompiler2021-Spring

./: README.md
Lab1/grammar/: SafeCLexer.g4  SafeCParser.g4
Lab2/: CMakeLists.txt  SafeCLexer.g4  main.cpp
Lab2/include/: AstBuilder.h  AstNode_Visitor.h  AstSerializer.h
Lab2/src/: AstBuilder.cpp
Lab2/test_cases/decl/: const_obcarray_decl_test1.c  const_unobcarray_decl_test1.c  const_var_decl_test1.c  global_const_obcarray_decl_test1.c  global_const_unobcarray_decl_test1.c  global_const_var_decl_test1.c  global_obcarray_decl_test1.c  global_unobcarray_decl_test1.c  global_var_decl_test1.c  obcarray_decl_test1.c  unobcarray_decl_test1.c  var_decl_test1.c
Lab2/test_cases/expr/: expr_test1.c  expr_test2.c
Lab2/test_cases/ifelse/: if_else_test1.c  if_else_test2.c  if_else_test3.c  if_else_test4.c
Lab2/test_cases/stmt/: assign_stmt_test1.c  block_test1.c  func_call_test1.c  func_call_test2.c  math_test1.c
Lab2/test_cases/while/: while_test1.c  while_test2.c
Lab3/: CMakeLists.txt  SafeCParser.g4  main.cpp
Lab3/cmake/: ExternalAntlr4Cpp.cmake
Lab3/include/: AstBuilder.h  AstNode.h  AstNode_Visitor.h  SafeCIRBuilder.h
Lab3/runtime/: io.cpp  io.h  runtime.cpp  runtime.h
Lab3/src/: AstBuilder.cpp
docs/: README.md
docs/Environment/: README.md
docs/Lab/: Lab1.md  Lab2.md  Lab3.md  README.md
docs/Tool/: ANTLR4.md  LLVM.md  README.md
